Fix IdP name overflowing button in login page

--- a/frontend/components/forms/LoginForm/_styles.scss
+++ b/frontend/components/forms/LoginForm/_styles.scss
@@ -9,7 +9,6 @@
     vertical-align: middle;
     height: 20px;
     width: 20px;
-    margin-right: 10px;
     border-radius: 20%;
   }
 
@@ -43,7 +42,17 @@
     align-self: flex-start;
   }
 
-  &__sso-btn.button {
+  &__sso-tooltip.component__tooltip-wrapper {
+    display: block;
+    width: 100%;
+
+    .component__tooltip-wrapper__element {
+      width: 100%;
+    }
+  }
+
+  &__sso-tooltip.component__tooltip-wrapper .component__tooltip-wrapper__element &__sso-btn.button {
+    width: 100%;
     border: 1px solid $core-fleet-black;
     white-space: nowrap;
   }
